# TP1_2c2023

./: CMakeLists.txt  README.md  main.cpp  savefile.csv
include/: Archivos.hpp  Inventario.hpp  Item.hpp  Logica.hpp  Menu.hpp
src/: Archivos.cpp  Inventario.cpp  Item.cpp  Logica.cpp  Menu.cpp  Vector.cpp
tests/: CMakeLists.txt
